<resources>
    <string name="app_name">Music Up</string>
    <string name="image_info">action_info</string>
    <string name="title_trending">Trending</string>
    <string name="title_home">Home</string>
    <string name="title_person">Person</string>
    <string name="title_discover">Discover</string>
    <string name="title_default">Title</string>
    <string name="title_blank">\t</string>
    <string name="title_song">songs</string>
    <string name="title_time_default">00:00</string>
    <string name="msg_delete">xóa</string>
    <string name="msg_history_search">Lịch sử tìm kiếm</string>
    <string name="msg_hot_key">Từ khóa hot</string>
    <string name="msg_hint_search">Nhập vào đây để tìm kiếm</string>
    <string name="msg_result_search">\t Kết quả tìm kiếm cho từ \t \"</string>
    <string name="music_offline">Nhạc Offline</string>
    <string name="favorite_songs">Nhạc yêu thích</string>
    <string name="playlist">Playlist yêu thích</string>
    <string name="error">ERROR</string>
    <string name="offline">OFFLINE</string>
    <string name="no_music_choose">No music choose</string>
    <string name="msg_ok">OK</string>
    <string name="msg_success">SUCCESS</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_save_success">Success! Save to</string>
    <string name="msg_song_already_exists">Songs already exists in \"</string>
    <string name="msg_permission_denied">PERMISSION DENIED</string>
    <string name="music_download">Nhạc Download</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="t_o_playlist">Tạo playlist</string>
    <string name="time_sleep">Time sleep</string>
    <string name="off">Off</string>
    <string name="_30">30\'</string>
    <string name="_60">60\'</string>
    <string name="_90">90\'</string>
    <string name="custom">Custom</string>
    <string name="action_confirm">Confirm</string>
    <string name="name_playlist">name to playlist</string>
</resources>
